// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ToggleChip should render 1`] = `
<ToggleChip__Field>
  <ToggleChip__Label
    checked={false}
    htmlFor="test"
  >
    <ToggleChip__Input
      checked={false}
      id="test"
      name="test"
      onChange={[Function]}
      type="checkbox"
    />
    <ToggleChip__Text
      maxWidth={30}
      title="Test chip"
    >
      Test
    </ToggleChip__Text>
  </ToggleChip__Label>
</ToggleChip__Field>
`;

exports[`ToggleChip should render checked 1`] = `
<ToggleChip__Field>
  <ToggleChip__Label
    checked={true}
    htmlFor="chiptoggle-1"
  >
    <ToggleChip__Input
      checked={true}
      id="chiptoggle-1"
      name="chiptoggle-1"
      onChange={[Function]}
      type="checkbox"
    />
    <ToggleChip__Text
      maxWidth={30}
      title="Test chip"
    >
      Test
    </ToggleChip__Text>
  </ToggleChip__Label>
</ToggleChip__Field>
`;
